[gd_scene load_steps=46 format=3 uid="uid://5vm1adqkv78a"]

[ext_resource type="Script" path="res://characters/player_cat_2.gd" id="1_p20lt"]
[ext_resource type="Texture2D" uid="uid://c3obikjbujjge" path="res://art/Sprout Lands - Sprites - Basic pack/Characters/Basic Charakter Spritesheet.png" id="2_26uyt"]
[ext_resource type="PackedScene" uid="uid://o8u7psbgtsb6" path="res://utility/hud_global.tscn" id="3_orf6j"]
[ext_resource type="PackedScene" uid="uid://c60dtnpcel5vn" path="res://utility/heart_scene.tscn" id="4_ni8xn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c77ut"]
radius = 6.0

[sub_resource type="Animation" id="Animation_pa5a0"]
resource_name = "AttackDown"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_a18ug"]
resource_name = "AttackLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_i42v6"]
resource_name = "AttackRight"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="Animation" id="Animation_6ul88"]
resource_name = "AttackUp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_xmher"]
resource_name = "IdleDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_v38yk"]
resource_name = "IdleLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_pwg8i"]
resource_name = "IdleRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_pe7xj"]
resource_name = "IdleUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_0nwku"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ieb0j"]
resource_name = "WalkDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_qtu2f"]
resource_name = "WalkLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_orrgm"]
resource_name = "WalkRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_38ady"]
resource_name = "WalkUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ppv74"]
_data = {
"AttackDown": SubResource("Animation_pa5a0"),
"AttackLeft": SubResource("Animation_a18ug"),
"AttackRight": SubResource("Animation_i42v6"),
"AttackUp": SubResource("Animation_6ul88"),
"IdleDown": SubResource("Animation_xmher"),
"IdleLeft": SubResource("Animation_v38yk"),
"IdleRight": SubResource("Animation_pwg8i"),
"IdleUp": SubResource("Animation_pe7xj"),
"RESET": SubResource("Animation_0nwku"),
"WalkDown": SubResource("Animation_ieb0j"),
"WalkLeft": SubResource("Animation_qtu2f"),
"WalkRight": SubResource("Animation_orrgm"),
"WalkUp": SubResource("Animation_38ady")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pdc02"]
animation = &"AttackRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0bn0t"]
animation = &"AttackDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7tog3"]
animation = &"AttackUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v54gd"]
animation = &"AttackLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_gtajg"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pdc02")
blend_point_0/pos = Vector2(1.1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_0bn0t")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_7tog3")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_v54gd")
blend_point_3/pos = Vector2(-1.1, 0)
min_space = Vector2(-1.1, -1.1)
max_space = Vector2(1.1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4bnwd"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_66wt4"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pq4wl"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0t8bd"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_jyt7i"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4bnwd")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_66wt4")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_pq4wl")
blend_point_2/pos = Vector2(-1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_0t8bd")
blend_point_3/pos = Vector2(1.1, 0)
min_space = Vector2(-1.1, -1.1)
max_space = Vector2(1.1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w85d2"]
animation = &"WalkDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7kcsl"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ret47"]
animation = &"WalkLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vu2lk"]
animation = &"WalkRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_noo4l"]
blend_point_0/node = SubResource("AnimationNodeAnimation_w85d2")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_7kcsl")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ret47")
blend_point_2/pos = Vector2(-1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_vu2lk")
blend_point_3/pos = Vector2(1.1, 0)
min_space = Vector2(-1.1, -1.1)
max_space = Vector2(1.1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vvjf4"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nuogq"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tyeab"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o3drl"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x6h3e"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vi3ux"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hxwg3"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_n56l8"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_gtajg")
states/Attack/position = Vector2(628, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_jyt7i")
states/Idle/position = Vector2(376, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_noo4l")
states/Walk/position = Vector2(376, 214)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_vvjf4"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_nuogq"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_tyeab"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_o3drl"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_x6h3e"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_vi3ux"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_hxwg3")]
graph_offset = Vector2(-36, 47)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68gct"]
bg_color = Color(0.501961, 0, 0, 1)
corner_detail = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cx1u5"]
bg_color = Color(0, 0.501961, 0, 1)
anti_aliasing = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwlgc"]
size = Vector2(16, 16)

[node name="PlayerCat2" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_p20lt")
move_speed = null
starting_direction = null
respawn_position = null
max_hp = null

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3)
texture = ExtResource("2_26uyt")
hframes = 4
vframes = 5
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c77ut")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ppv74")
}

[node name="AnimationTree" type="AnimationTree" parent="." groups=["Player"]]
tree_root = SubResource("AnimationNodeStateMachine_n56l8")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = Vector2(-0.00961542, 0.827434)
parameters/Idle/blend_position = Vector2(0.75, 0.126549)
parameters/Walk/blend_position = Vector2(-0.607692, 0.136283)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -8.0
offset_top = -14.0
offset_right = 8.0
offset_bottom = -12.0
theme_override_styles/background = SubResource("StyleBoxFlat_68gct")
theme_override_styles/fill = SubResource("StyleBoxFlat_cx1u5")
max_value = 20.0
step = 1.0
value = 20.0
show_percentage = false

[node name="AttackHitBox" type="Area2D" parent="." groups=["Player"]]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitBox"]
shape = SubResource("RectangleShape2D_gwlgc")

[node name="HudGlobal" parent="." instance=ExtResource("3_orf6j")]
z_index = 10
position = Vector2(0, -64)
heart_scene = ExtResource("4_ni8xn")

[connection signal="body_entered" from="AttackHitBox" to="." method="_on_attack_hit_box_body_entered"]
